--- a/style.scss
+++ b/style.scss
@@ -17,10 +17,15 @@ html {
   font-size: 100%;
 }
 
+// body {
+// 	background: $white;
+//   font: 18px/1.4 $helvetica;
+//   color: $darkGray;
+// }
 body {
-	background: $white;
+	background: $#0e2439;
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: $white;
 }
 
 .container {
