--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ html {
 //   color: $darkGray;
 // }
 body {
-	background: $#0e2439;
+	background: #0e2439;
   font: 18px/1.4 $helvetica;
   color: $white;
 }
